--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body style="
+  <div style="
   background: -webkit-linear-gradient(pink, brown);
   background: -o-linear-gradient(pink, brown);
   background: -moz-linear-gradient(pink, brown);
@@ -47,8 +47,8 @@
     </div>
 
     <div class="content">
-
+      {% block body_block %}{% endblock %}
     </div>
 
-  </body>
+  </div>
 </html>
