small amounts of base work

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,9 @@
   background: -webkit-linear-gradient(pink, brown);
   background: -o-linear-gradient(pink, brown);
   background: -moz-linear-gradient(pink, brown);
-  background: linear-gradient(pink, brown);">
+  background: linear-gradient(pink, brown);
+  font-family:Comic Sans MS, cursive, sans-serif;
+  font-size: 28px">
 
     <img src="https://i.ytimg.com/vi/gPSa-IYj_kU/maxresdefault.jpg" alt="NO HACKING FOR YOU" style="display:none; height:95vh; width:95vw">
 
@@ -46,7 +48,9 @@
       </ul>
     </div>
 
-    <div class="content">
+    <div class="content" style="background:white; position:absolute;
+    top:20vh; height:60vh; left:20vw; width:60vw;">
+    <p>HERE ARE SOME NOTIFICATIONS</p>
       {% block body_block %}{% endblock %}
     </div>
 
