--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,9 @@
 
-{% if user.is_authenticated %}
-<h1>Your info</h1>
-<h4>hi {{ user.username }}</h4>
-<h4>your cash is  {{ user.balance }}</h4>
-<a href=""><h2>logout<h2><a>
-{% else %}
-<h1>Rango says... hello world!</h1>
-{% endif %}
+<h1>Login</h1>
+        <form method="post" action=".">
+                {% csrf_token %}
+                {{ form.as_p }}
+
+<input type="submit" value="Log in" />
+<input type="hidden" name="next" value="{{ next }}" />
+</form>
