--- a/templates/rango/account.html
+++ b/templates/rango/account.html
@@ -1,14 +1,8 @@
-{% extends "rango/base.html" %}
+{% extends "base.html" %}
 
 {% block body_block %}
-<h1>Login</h1>
-        <form method="post" action=".">
-                {% csrf_token %}
-                {{ form.as_p }}
-
-                <input type="submit" value="Log in" />
-                <input type="hidden" name="next" value="{{ next }}" />
-                </form>
-
-        <p>Not  a member? <a href="{% url 'registration_register' %}">Register</a>!</p>
+	<div>hello
+	you have this much cash {{user.balance}}
+	</div>
+<a href="logout">logout<a>
 {% endblock %}
