David: Added clickable letmegooglethis link

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
   background: -moz-linear-gradient(pink, brown);
   background: linear-gradient(pink, brown);
   font-family:Comic Sans MS, cursive, sans-serif;
-  font-size: 28px">
+  font-size: 28px
+		width: 100%">
 
     <img src="https://i.ytimg.com/vi/gPSa-IYj_kU/maxresdefault.jpg" alt="NO HACKING FOR YOU" style="display:none; height:95vh; width:95vw">
 
@@ -28,8 +29,8 @@
       background: -moz-linear-gradient(red, yellow);
       background: linear-gradient(red, yellow);
       height:5vh; overflow:hidden">
-        <a href="#" class="pure-menu-heading pure-menu-link">ANONYMOUSE</a>
-        <ul class="pure-menu-list" style="float:right">
+        <a href="http://images.lmgtfy.com/?q=anonymouse" class="pure-menu-heading pure-menu-link">ANONYMOUSE {Top Cyber bank of 1991}</a>
+        <ul class="pure-menu-list" style="left: 50px">
             <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Selected</a></li>
             <li class="pure-menu-item"><a href="#" class="pure-menu-link">Normal</a></li>
             <li class="pure-menu-item pure-menu-disabled">Disabled</li>
