--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
         <span class="pure-menu-heading">Sidebar</span>
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">items</a></li>
+        <li class="pure-menu-item"><a href="{% url 'auth_login' %}">Login</a></li>
       </ul>
     </div>
 
