added a very important registering link

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
      height:95vh; overflow:hidden">
         <span class="pure-menu-heading">Sidebar</span>
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="http://www.lemonparty.fr">Register</a></li>
+        <li class="pure-menu-item"><a href="/registering/">Register</a></li>
         <li class="pure-menu-item"><a href="{% url 'auth_login' %}">Login</a></li>
       </ul>
     </div>
