--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-	You are logged out
+	You are logged out!
+	<a href="{% url 'bienvenue' %}">Return to the homepage</a>
 {% endblock %}
