--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -37,6 +37,8 @@
         </ul>
     </div>
 
+    HEYY
+
     <div class="pure-menu custom-restricted-width" style="display:inline-block;
       background: -webkit-linear-gradient(red, yellow);
       background: -o-linear-gradient(red, yellow);
