--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -51,7 +51,7 @@
         <span class="pure-menu-heading"><strong>LOGGED OUT</strong></span>
      {% endif %}
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="{% url 'bienvenue_fake' %}">Homepage</a></li>
+        <li class="pure-menu-item"><a href="{% url 'bienvenue' %}">Homepage</a></li>
 
         {% if user.is_authenticated %}
           <li class="pure-menu-item"><a href="{% url 'account' %}">Account</a></li>
